--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "doclets": "node build/doclets.js -p . -t src/data/",
-    "storybook": "start-storybook -p 6006"
+    "storybook": "start-storybook -p 6006 -s src/assets/"
   },
   "dependencies": {
     "file-saver": "^2.0.5",
-    "geoportal-extensions-openlayers": "3.0.14",
+    "geoportal-extensions-openlayers": "https://raw.githubusercontent.com/IGNF/geoportal-extensions/fix-logger/build/scripts/release/geoportal-extensions-openlayers-3.0.14.tgz",
     "ol": "5.3.0"
   },
   "devDependencies": {
