--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
+    "@highlightjs/vue-plugin": "^0.9.0",
     "@storybook/addon-actions": "^6.2.2",
     "@storybook/addon-essentials": "^6.2.2",
     "@storybook/addon-links": "^6.2.2",
@@ -29,6 +30,7 @@
     "dataobject-parser": "^1.2.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.0.1",
+    "highlight.js": "^10.7.2",
     "jsdoc": "^3.6.6",
     "merge-deep": "^3.0.3",
     "vue": "^2.6.11",
