--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
-    "geoportal-extensions-openlayers": "https://raw.githubusercontent.com/IGNF/geoportal-extensions/fix-logger/build/scripts/release/geoportal-extensions-openlayers-3.0.14.tgz",
+    "geoportal-extensions-openlayers": "3.0.15",
     "ol": "5.3.0"
   },
   "devDependencies": {
