--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "doclets": "node build/doclets.js -p . -t src/data/",
     "storybook": "start-storybook -p 6006 -s src/assets/"
   },
+  "engines": {
+    "node": "~12.22.12",
+    "npm": "~6.14.18"
+  },
   "dependencies": {
     "file-saver": "^2.0.5",
     "geoportal-extensions-openlayers": "3.2.21",
