--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geoportal-extensions-openlayers-samples",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -16,8 +16,9 @@
   },
   "dependencies": {
     "file-saver": "^2.0.5",
-    "geoportal-extensions-openlayers": "3.4.0-beta4",
-    "ol": "6.9.0"
+    "geoportal-extensions-openlayers": "./geoportal-extensions-openlayers-1.0.0-beta.4.tgz",
+    "geoportal-access-lib": "3.4.0",
+    "ol": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
