--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "npm": "~8.3.1"
   },
   "dependencies": {
+    "@gouvfr/dsfr": "^1.11.0",
     "file-saver": "^2.0.5",
     "geoportal-access-lib": "3.4.0",
-    "geoportal-extensions-openlayers": "./geoportal-extensions-openlayers-1.0.0-beta.4.tgz",
+    "geoportal-extensions-openlayers": "./geoportal-extensions-openlayers-1.0.0-beta.5.tgz",
     "ol": "8.2.0"
   },
   "devDependencies": {
