--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@gouvfr/dsfr": "^1.11.0",
     "file-saver": "^2.0.5",
     "geoportal-access-lib": "3.4.0",
-    "geoportal-extensions-openlayers": "./geoportal-extensions-openlayers-1.0.0-beta.12.tgz",
+    "geoportal-extensions-openlayers": "./geopf-extensions-openlayers-1.0.0-beta.0-165.tgz",
     "ol": "8.2.0"
   },
   "devDependencies": {
